@@ -26,7 +26,7 @@ function parse_options() {
 	}
 }
 
-function add_torrent($filename, $dest) {
+function add_torrent($directory, $filename, $dest) {
 	global $config_values, $hit;
 	$btcli = '/mnt/syb8634/bin/btcli';
 	$btcli_add = 'add -d';
@@ -39,22 +39,22 @@ function add_torrent($filename, $dest) {
 	$trans_down_dir = '-f';
 	$trans_add = '-a';
 
-	_debug("Adding Torrent $filename\n",0);
 	$hit = 1;
 	if($config_values['Settings']['Deep Directories']) {
 		preg_match("/(.*)\.torrent/", $filename, $matches);
 		$orig = $dest;
 		$dest = "$dest/$matches[1]";
+		_debug("Deep Directorys, change dest to $dest\n", 1);
 	}
 	exec("mkdir -p \"$dest\"");
 	if($config_values['Settings']['Client'] == "btpd")
-		exec("$btcli_exec $btcli_add \"$dest\" \"$filename\"", $output, $return);
+		exec("$btcli_exec $btcli_add \"$dest\" \"$directory/$filename\"", $output, $return);
 	else if($config_values['Settings']['Client'] == "transmission") {
 		/* Transmission wont let us explicitly set download dir till they release 1.30 */
 		$trans_dl = transmission_get_dl_dir();
 		if(!($trans_dl == $dest))
 			exec("$trans_exec $trans_down_dir \"$dest\"");
-		exec("$trans_exec $trans_add \"$filename\"", $output, $return);
+		exec("$trans_exec $trans_add \"$directory/$filename\"", $output, $return);
 		/* sometimes our download ends up here anyways, depending on when the file gets written to disk */
 		if(!($trans_dl == $dest))
 			exec("$trans_exec $trans_down_dir \"$trans_dl\"");
@@ -62,21 +62,21 @@ function add_torrent($filename, $dest) {
 		_debug("Invalid Torrent Client: ".$config_values['Settings']['Client']."\n",0);
 		exit(1);
 	}
-	if($return = 0)
-		_debug("Starting: $filename\n");
-	else
-		_debug("Failed Starting: $filename\n");
+	if($return == 0)
+		_debug("Starting: $filename in $dest\n",0);
+	else 
+		_debug("Failed Starting: $filename  Return code $return\n",0);
 	if($config_values['Settings']['Save Torrents'])
-		rename($filename, "$dest/".basename($filename));
+		rename("$directory/$filename", "$dest/".basename($filename));
 	else
-		unlink($filename);
+		unlink("$directory/$filename");
 }
 
 function check_for_torrents($directory, $dest) {
 	if($handle = opendir($directory)) {
 		while(false !== ($file = readdir($handle))) {
 			if(preg_match('/\.torrent$/', $file))
-				add_torrent("$directory/$file", $dest);
+				add_torrent($directory, $file, $dest);
 		}
 		closedir($handle);
 	} else {
